# PFone-2-PFtwo

./: AGENTS.md  README.md  pdf_parser.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  test.yml
scripts/: setup_codex_env.sh
tests/: test_cli.py  test_parser.py  utils.py
