[project]
name = "pfpdf"
version = "0.1.0"
description = "PDF image extractor and Foundry VTT scene builder"
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyMuPDF>=1.22.5",
]

[project.scripts]
pfpdf = "pdf_parser:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
